fixes
Added default (ALL) button in gantt
Fixes in the URL for the download in home page
Navbar brand icon redirects to home
Scrollbar for Gantt fixed for >1024px, waiting for other svgs
Modal side fixes

--- a/vsfWeb/commons/static/scss/pages/pages.scss
+++ b/vsfWeb/commons/static/scss/pages/pages.scss
@@ -945,8 +945,8 @@ input#title{
     width: auto;
     min-width: 500px;
     top: 5%;
-    left: 10%;
-    right: 10%;
+    left: 35%;
+    right: 35%;
     
     min-width: 500px; 
       
@@ -1240,7 +1240,7 @@ input#title{
 	}
 	
 	&::-webkit-scrollbar-thumb:horizontal {
-	  background-image: url("/commons/static/img/icons/vsf_iconscrollbarhorizontal_v101.svg");
+	  background-image: url("/commons/static/img/icons/VSF_IconScrollBarHorizontalLarge_v1.0.1.svg");
 	  background-repeat: no-repeat;
 	  height: 50px !important;
 	  background-position: center; 
@@ -1412,6 +1412,16 @@ a{
 
 /* HOME */
 
+.searchHome{
+    text-align: center;
+    color: #7c96e8;
+    padding: 12px 16px 8px 24px !important;
+    
+    a {
+   	 	text-transform: none !important;
+    	cursor: pointer;
+}
+}
 #blockedHome{
 	padding-top : 5px;
 }
